nosdnc/policy-agent-deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: policy-agent-container
  namespace: nonrtric
  labels:
    app: policy-agent-container
spec:
  selector:
    matchLabels:
      app: policy-agent-container
  replicas: 1
  template:
    metadata:
      labels:
        app: policy-agent-container
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/nonrtric-policy-agent:1.0.0
        ports:
        - name: http
          containerPort: 8081
        - name: https
          containerPort: 8433
        volumeMounts:
        - name: "config"
          mountPath: "/opt/app/policy-agent/config/application_configuration.json"
          subPath: "application_configuration.json"
      volumes:
        - name: "config"
          configMap:
            name: "config"
