nosdnc/policy-control-panel-deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: controlpanel
  namespace: nonrtric
  labels:
    app: controlpanel
spec:
  selector:
    matchLabels:
      app: controlpanel
  replicas: 1
  template:
    metadata:
      labels:
        app: controlpanel
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/nonrtric-controlpanel:1.0.0
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8082
