nosdnc/nosdnc.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: nonrtric
  labels:
    name: nonrtric
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: a1-interface-osc
  namespace: nonrtric
  labels:
    app: a1-interface-osc
spec:
  selector:
    matchLabels:
      app: a1-interface-osc
  replicas: 1
  template:
    metadata:
      labels:
        app: a1-interface-osc
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/a1-simulator:1.0.1
        ports:
        - name: http
          containerPort: 8085
        - name: https
          containerPort: 8185
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: a1-interface-std
  namespace: nonrtric
  labels:
    app: a1-interface-std
spec:
  selector:
    matchLabels:
      app: a1-interface-std
  replicas: 1
  template:
    metadata:
      labels:
        app: a1-interface-std
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/a1-simulator:1.0.1
        ports:
        - name: http
          containerPort: 8085
        - name: https
          containerPort: 8185
---
apiVersion: v1
kind: Service
metadata:
  name: a1-interface-osc
  namespace: nonrtric
  labels:
    app: a1-interface-osc
spec:
  type: NodePort
  ports:
  - name: http
    port: 8085
    targetPort: 8085
  - name: https
    port: 8185
    targetPort: 8185
  selector:
    app: a1-interface-osc
---
apiVersion: v1
kind: Service
metadata:
  name: a1-interface-std
  namespace: nonrtric
  labels:
    app: a1-interface-std
spec:
  type: NodePort
  ports:
  - name: http
    port: 8085
    targetPort: 8085
  - name: https
    port: 8185
    targetPort: 8185
  selector:
    app: a1-interface-std
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: policy-agent-container
  namespace: nonrtric
  labels:
    app: policy-agent-container
spec:
  selector:
    matchLabels:
      app: policy-agent-container
  replicas: 1
  template:
    metadata:
      labels:
        app: policy-agent-container
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/nonrtric-policy-agent:1.0.0
        ports:
        - name: http
          containerPort: 8081
        - name: https
          containerPort: 8433
        volumeMounts:
        - name: "config"
          mountPath: "/opt/app/policy-agent/config/application_configuration.json"
          subPath: "application_configuration.json"
      volumes:
        - name: "config"
          configMap:
            name: "config"
---
apiVersion: v1
kind: Service
metadata:
  name: policy-agent-container
  namespace: nonrtric
  labels:
    app: policy-agent-container
spec:
  type: NodePort
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  - name: https
    port: 8433
    targetPort: 8433
  selector:
    app: policy-agent-container

---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: controlpanel
  namespace: nonrtric
  labels:
    app: controlpanel
spec:
  selector:
    matchLabels:
      app: controlpanel
  replicas: 1
  template:
    metadata:
      labels:
        app: controlpanel
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/nonrtric-controlpanel:1.0.0
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: controlpanel
  namespace: nonrtric
  labels:
    app: controlpanel
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8082
    targetPort: 8082
  selector:
    app: controlpanel
