nosdnc/policy-agent-service.yml
apiVersion: v1
kind: Service
metadata:
  name: policy-agent-container
  namespace: nonrtric
  labels:
    app: policy-agent-container
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: policy-agent-container
