nosdnc/policy-control-panel-service.yml
apiVersion: v1
kind: Service
metadata:
  name: controlpanel
  namespace: nonrtric
  labels:
    app: controlpanel
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: controlpanel
