nosdnc/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nonrtric-ingress
  namespace: nonrtric
  # annotations:
  #   ingress.kubernetes.io/rewrite-target: /
spec:
  # backend:
  #   serviceName: a1-interface-osc
  #   servicePort: 8085
  rules:
  - http:
      paths:
      - path: /ip
        # pathType: Prefix
        backend:
          serviceName: a1-interface-osc
          servicePort: 8085
